{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 44,
  "lineage": "9a005ac1-3a9b-6a08-2a64-e527f7ae15a7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/frontendIPConfigurations/PublicIpAddress",
                "load_balancer_rules": [
                  "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/loadBalancingRules/http"
                ],
                "name": "PublicIpAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/publicIPAddresses/lbPublicIP"
              }
            ],
            "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "location": "westus2",
            "name": "loadBalancer",
            "resource_group_name": "hemi-solution",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.pubIP",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lbBackPool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Compute/virtualMachineScaleSets/nix-vmss/virtualMachines/1/networkInterfaces/vmssInt/ipConfigurations/vmss",
              "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Compute/virtualMachineScaleSets/nix-vmss/virtualMachines/2/networkInterfaces/vmssInt/ipConfigurations/vmss"
            ],
            "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/loadBalancerBackPool",
            "load_balancing_rules": [
              "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "loadBalancerBackPool",
            "resource_group_name": "hemi-solution"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.pubIP",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lbProbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/probes/loadBalancerProbe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "loadBalancerProbe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Http",
            "request_path": "/",
            "resource_group_name": "hemi-solution"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.pubIP",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/loadBalancerBackPool",
            "backend_address_pool_ids": [
              "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/loadBalancerBackPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/frontendIPConfigurations/PublicIpAddress",
            "frontend_ip_configuration_name": "PublicIpAddress",
            "frontend_port": 80,
            "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "http",
            "probe_id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/loadBalancers/loadBalancer/probes/loadBalancerProbe",
            "protocol": "Tcp",
            "resource_group_name": "hemi-solution"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.lbBackPool",
            "azurerm_lb_probe.lbProbe",
            "azurerm_public_ip.pubIP",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backNSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/networkSecurityGroups/backEndSecurityGroup",
            "location": "westus2",
            "name": "backEndSecurityGroup",
            "resource_group_name": "hemi-solution",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow80toLoadBalancerOnly",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "httpToLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/networkSecurityGroups/backEndSecurityGroup/securityRules/Allow80toLoadBalancerOnly",
            "name": "Allow80toLoadBalancerOnly",
            "network_security_group_name": "backEndSecurityGroup",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "hemi-solution",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.backNSG",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/publicIPAddresses/lbPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.148.148.181",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "lbPublicIP",
            "resource_group_name": "hemi-solution",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vmss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/virtualNetworks/hemi-vnet/subnets/vmss-subnet",
            "name": "vmss-subnet",
            "resource_group_name": "hemi-solution",
            "virtual_network_name": "hemi-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "dns_servers": [
              "8.8.8.8",
              "8.8.4.4"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2268b3c3-ed53-4cf8-9085-cf30cc63f06e",
            "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/virtualNetworks/hemi-vnet",
            "location": "westus2",
            "name": "hemi-vnet",
            "resource_group_name": "hemi-solution",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/a9bbd939-26e2-42fa-89fd-1a4cecb13bc3/resourceGroups/hemi-solution/providers/Microsoft.Network/virtualNetworks/hemi-vnet/subnets/vmss-subnet",
                "name": "vmss-subnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}